fixed bugs in popup (flickering items)

--- a/popup/style.css
+++ b/popup/style.css
@@ -1,6 +1,8 @@
 body{
     height: 580px;
     width: 400px;
+    background-image: url(https://images.unsplash.com/photo-1534796636912-3b95b3ab5986?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1351&q=80);
+
 }
 img {
       width: 50px;
@@ -32,7 +34,7 @@ span{
   opacity: 0;
 }
 td:hover span{
-  width: 30px;
+  width: 27px;
   opacity: 1.0;
 }
 .center {
@@ -61,7 +63,7 @@ td:hover span{
   width: 100%;
 }
 .price{
-  color: green;
+  color: white;
   font-size: medium;
   font-weight: 500;
   margin: auto;
