--- a/wishList_page/page.css
+++ b/wishList_page/page.css
@@ -65,7 +65,7 @@ img{
   height: 30px;
 }
 #h2_head {
-  margin-left: 21%;
+  
   background-color: honeydew;
   width: 40%;
 }
